# CG

./: .gitignore
Cuda/: CMakeLists.txt
Cuda/doc/: note.md
Cuda/include/: anim_bitmap.h  common.h  cpu_anim_bitmap.h  gpu_anim_bitmap.h  window_manager.h
Cuda/script/: gen_video.py
Cuda/src/: CMakeLists.txt  common.cu  window_manager.cpp
Cuda/src/chapter10/: CMakeLists.txt  malloc.cu  single_stream.cu
Cuda/src/chapter3/: CMakeLists.txt  hello_world.cu  passing_parameters.cu  property.cu  using_property.cu
Cuda/src/chapter4/: julia_set.cu  vec_add.cu
Cuda/src/chapter5/: CMakeLists.txt  bitmap.cu  ripple.cu  sharemem.cu
Cuda/src/chapter6/: CMakeLists.txt  ray_tracing.cu
Cuda/src/chapter7/: heat.cu
Cuda/src/chapter8/: heat_cuda_gl.cu  interoperation.cu  interpolation.cu  ripple_cuda_gl.cu
Cuda/src/chapter9/: histogram.cu
Cuda/src/inc_impl/: CMakeLists.txt  anim_bitmap.cu  common.cu  cpu_anim_bitmap.cu  gpu_anim_bitmap.cu  window_manager.cpp
Neural Radiance Field/config/: hotdog.ini  hotdog.json  nerf.json
Neural Radiance Field/dataset/: __init__.py  camera.py  frame_dataset.py  ray_dataset.py  ray_sampling.py
Neural Radiance Field/doc/: NeRF in One Week.md
Neural Radiance Field/ioutil/: __init__.py  base_io.py  image_io.py  json_io.py  video_io.py  volume_io.py
Neural Radiance Field/main/: main.py  nerf.py
Neural Radiance Field/main/option/: nerf_opt.py
Neural Radiance Field/model/: __init__.py  gen_shs.py  model.py  nerf_model.py  pos_enc.py  renderer.py  sample_ray.py  scenenet.py
Neural Radiance Field/model/encoding/: __init__.py  encoding.py  trigonometric.py
Neural Radiance Field/model/encodings/: __init__.py  spherical_harmonic.py
Neural Radiance Field/model/network/: nerf_network.py  renderer.py  scenenet.py
Neural Radiance Field/model/networks/: nerf_network.py  renderer.py
Neural Radiance Field/model/setting/: __init__.py  activations.py  losses.py  optimizers.py
Neural Radiance Field/model/settings/: __init__.py  activations.py  loss.py  losses.py  metrics.py  optimizer.py  optimizers.py
Neural Radiance Field/test/: test_encoding.py  test_image_io.py  test_json_io.py  test_model_setting.py  test_video_io.py
Neural Radiance Field/utils/: logger.py  logging.py  metrics.py  utils.py
Physically Based Rendering for Ray Tracing/: CMakeLists.txt  Readme.md
Physically Based Rendering for Ray Tracing/doc/: Chapter 1 Introduction.md  Chapter 2 Geometry and Transforms.md  geometry.md
Physically Based Rendering for Ray Tracing/include/: common.h  debug.h  define.h
Physically Based Rendering for Ray Tracing/include/arg_parser/: arg_parser.h
Physically Based Rendering for Ray Tracing/include/geometry/: aabb2.h  aabb3.h  quaternion.h  ray.h  swizzle.h  tuple2.h  tuple3.h  vector2.h  vector3.h
Physically Based Rendering for Ray Tracing/include/log/: log.h
Physically Based Rendering for Ray Tracing/include/math/: arithmetic.h  matrix.h  square_matrix.h
Physically Based Rendering for Ray Tracing/include/transform/: transform.h
Physically Based Rendering for Ray Tracing/include/util/: arithmetic.h
Physically Based Rendering for Ray Tracing/main/: main.cpp
Physically Based Rendering for Ray Tracing/script/: line_counter.py
Physically Based Rendering for Ray Tracing/src/: CMakeLists.txt
Physically Based Rendering for Ray Tracing/src/arg_parser/: CMakeLists.txt  arg_parser.cpp
Physically Based Rendering for Ray Tracing/src/arguments_parser/: arguments_parser.cpp
Physically Based Rendering for Ray Tracing/src/geometry/: quaternion.cpp  ray.cpp
Physically Based Rendering for Ray Tracing/src/log/: log.cpp
Physically Based Rendering for Ray Tracing/src/math/: arithmetic.cpp  square_matrix.cpp
Physically Based Rendering for Ray Tracing/src/transform/: CMakeLists.txt  transform.cpp
Physically Based Rendering for Ray Tracing/test/: CMakeLists.txt
Physically Based Rendering for Ray Tracing/test/geometry/: test_aabb.cpp  test_quaternion.cpp  test_ray.cpp  test_vector.cpp
Physically Based Rendering for Ray Tracing/test/math/: test_arithmetic.cpp  test_square_matrix.cpp
Physically Based Rendering for Ray Tracing/test/transform/: test_transform.cpp
Ray Tracing/: CMakeLists.txt  Ray Tracing.md
Ray Tracing/C++/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  material.hpp  ray.hpp  sphere.hpp  test  test_ppm.cpp  utility.hpp  vec3.hpp
Ray Tracing/C++/include/: camera.hpp  hittable.hpp  hittable_list.hpp  material.hpp  ray.hpp  vec3.hpp  write_ppm.hpp
Ray Tracing/C++/src/: camera.cpp  hittable_list.cpp  ray.cpp  shpere.cpp  vec3.cpp  weekend.cpp  write_ppm.cpp
Ray Tracing/include/: axis_aligned_bounding_box.hpp  axis_aligned_rectangle.hpp  bounding_volume_hierarchy.hpp  box.hpp  camera.hpp  hittable.hpp  hittable_list.hpp  material.hpp  moving_sphere.hpp  perlin.hpp  ray.hpp  sphere.hpp  texture.hpp  utility.hpp  vec3.hpp  volume.hpp  write_image.hpp  write_ppm.hpp
Ray Tracing/main/: week.cpp  weekend.cpp
Ray Tracing/src/: axis_aligned_bounding_box.cpp  axis_aligned_rectangle.cpp  bounding_volume_hierarchy.cpp  box.cpp  camera.cpp  hittable.cpp  hittable_list.cpp  life.cpp  material.cpp  moving_sphere.cpp  perlin.cpp  ray.cpp  shpere.cpp  texture.cpp  vec3.cpp  volume.cpp  week.cpp  weekend.cpp  write_image.cpp  write_ppm.cpp
